--- a/Codigo/Front/Frames-Lista-Objetos/stylePublicacion.css
+++ b/Codigo/Front/Frames-Lista-Objetos/stylePublicacion.css
@@ -51,11 +51,11 @@ body::-webkit-scrollbar-thumb {
     color: white;
 }
 
-header {
+.access-nav {
     width: 7vw;
     height: 4vh;
     box-sizing: content-box;
-    padding: 1vh 1.5vw;
+    padding: 1.5vh 1.5vw 0;
     align-self: flex-end;
     display: flex;
     justify-content: space-between;
@@ -86,6 +86,7 @@ header {
     cursor: pointer;
     font-size: 0.8rem;
     border-radius: 0.6vw;
+    box-shadow: 0 0.1rem 0.2rem black;
     transition: background-color 0.25s;
 }
 
@@ -126,17 +127,22 @@ main {
     height: auto;
 }
 
-.titulo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 55vw;
+.titulo-container {
+    display: grid;
+    place-items: center;
     height: 13vh;
+}
+
+.titulo{
+    text-align: center;
+    max-width: 40vw;
     text-decoration: underline;
     text-underline-offset: 0.7rem;
     color: white;
     font-size: 2rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .Mder > article > h2 {
@@ -338,6 +344,7 @@ body > .Mder > .coments > section > article > p {
     user-select: none;
     font-weight: 700;
     font-size: 1.7rem;
+    box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.603);
     transition: background-color 0.25s;
 }
 
